module console building tool